@@ -17,17 +17,19 @@
  */
 package de.tudarmstadt.ukp.inception.ui.kb;
 
+import static de.tudarmstadt.ukp.inception.support.lambda.LambdaBehavior.visibleWhen;
 import static de.tudarmstadt.ukp.inception.ui.kb.KnowledgeBasePage.PAGE_PARAM_KB_NAME;
+import static org.apache.wicket.RuntimeConfigurationType.DEVELOPMENT;
 
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.apache.wicket.AttributeModifier;
 import org.apache.wicket.Component;
 import org.apache.wicket.ajax.AjaxRequestTarget;
 import org.apache.wicket.event.Broadcast;
+import org.apache.wicket.extensions.ajax.markup.html.modal.ModalDialog;
 import org.apache.wicket.feedback.IFeedback;
 import org.apache.wicket.markup.html.WebMarkupContainer;
 import org.apache.wicket.markup.html.form.ChoiceRenderer;
@@ -47,6 +49,7 @@ import org.wicketstuff.event.annotation.OnEvent;
 
 import de.tudarmstadt.ukp.clarin.webanno.model.Project;
 import de.tudarmstadt.ukp.clarin.webanno.ui.core.page.ProjectPageBase;
+import de.tudarmstadt.ukp.inception.bootstrap.BootstrapModalDialog;
 import de.tudarmstadt.ukp.inception.conceptlinking.config.EntityLinkingProperties;
 import de.tudarmstadt.ukp.inception.conceptlinking.service.ConceptLinkingService;
 import de.tudarmstadt.ukp.inception.kb.KnowledgeBaseService;
@@ -58,6 +61,7 @@ import de.tudarmstadt.ukp.inception.kb.graph.KBProperty;
 import de.tudarmstadt.ukp.inception.kb.graph.KBStatement;
 import de.tudarmstadt.ukp.inception.kb.model.KnowledgeBase;
 import de.tudarmstadt.ukp.inception.support.lambda.LambdaAjaxFormComponentUpdatingBehavior;
+import de.tudarmstadt.ukp.inception.support.lambda.LambdaAjaxLink;
 import de.tudarmstadt.ukp.inception.ui.kb.event.AjaxConceptSelectionEvent;
 import de.tudarmstadt.ukp.inception.ui.kb.event.AjaxInstanceSelectionEvent;
 import de.tudarmstadt.ukp.inception.ui.kb.event.AjaxNewConceptEvent;
@@ -96,6 +100,7 @@ public class KnowledgeBasePanel
     private Model<KBProperty> selectedPropertyHandle = Model.of();
     private Model<KBHandle> searchHandleModel = Model.of();
 
+    private ModalDialog dialog;
     private WebMarkupContainer detailContainer;
     private ConceptTreePanel conceptTreePanel;
     private PropertyListPanel propertyListPanel;
@@ -114,17 +119,22 @@ public class KnowledgeBasePanel
 
         setOutputMarkupId(true);
 
+        dialog = new BootstrapModalDialog("dialog");
+        add(dialog);
+
+        add(new LambdaAjaxLink("query", this::actionQuery).add(
+                visibleWhen(() -> DEVELOPMENT.equals(getApplication().getConfigurationType()))));
+
         kbModel = aKbModel;
 
         // add the selector for the knowledge bases
-        DropDownChoice<KnowledgeBase> ddc = new DropDownChoice<KnowledgeBase>("knowledgebases",
-                LoadableDetachableModel
-                        .of(() -> kbService.getEnabledKnowledgeBases(aProjectModel.getObject())));
+        var ddc = new DropDownChoice<KnowledgeBase>("knowledgebases", LoadableDetachableModel
+                .of(() -> kbService.getEnabledKnowledgeBases(aProjectModel.getObject())));
 
         ddc.add(new LambdaAjaxFormComponentUpdatingBehavior("change", t -> {
             String kbName = aKbModel.getObject().getName();
 
-            PageParameters pageParameters = new PageParameters();
+            var pageParameters = new PageParameters();
             ProjectPageBase.setProjectPageParameter(pageParameters, aProjectModel.getObject());
             pageParameters.set(PAGE_PARAM_KB_NAME, kbName);
             setResponsePage(KnowledgeBasePage.class, pageParameters);
@@ -148,19 +158,25 @@ public class KnowledgeBasePanel
         detailContainer.add(details);
     }
 
+    private void actionQuery(AjaxRequestTarget aTarget)
+    {
+        var content = new SparqlPanel(ModalDialog.CONTENT_ID, kbModel);
+        dialog.open(content, aTarget);
+    }
+
     private KnowledgeBaseItemAutoCompleteField createSearchField(String aId,
             IModel<KBHandle> aHandleModel, IModel<Project> aProjectModel)
     {
-        KnowledgeBaseItemAutoCompleteField field = new KnowledgeBaseItemAutoCompleteField(aId,
-                aHandleModel, _query -> listSearchResults(aProjectModel.getObject(), _query))
+        var field = new KnowledgeBaseItemAutoCompleteField(aId, aHandleModel,
+                _query -> listSearchResults(aProjectModel.getObject(), _query))
         {
             private static final long serialVersionUID = 3188821013226116770L;
 
             @Override
             protected void onSelected(AjaxRequestTarget aTarget)
             {
-                KBHandle selectedResource = this.getModelObject();
-                Optional<KBObject> optKbObject = kbService.readItem(kbModel.getObject(),
+                var selectedResource = this.getModelObject();
+                var optKbObject = kbService.readItem(kbModel.getObject(),
                         selectedResource.getIdentifier());
 
                 if (!optKbObject.isPresent()) {
@@ -186,12 +202,10 @@ public class KnowledgeBasePanel
      */
     private List<KBHandle> listSearchResults(Project aProject, String aTypedString)
     {
-        List<KBHandle> results;
-        KnowledgeBase kb = kbModel.getObject();
-        results = conceptLinkingService.searchItems(kb, aTypedString).stream()
-                .limit(entityLinkingProperties.getCandidateDisplayLimit())
-                .collect(Collectors.toList());
-        return results;
+        var kb = kbModel.getObject();
+        return conceptLinkingService.searchItems(kb, aTypedString).stream() //
+                .limit(entityLinkingProperties.getCandidateDisplayLimit()) //
+                .toList();
     }
 
     /**
@@ -204,8 +218,8 @@ public class KnowledgeBasePanel
                     new AjaxConceptSelectionEvent(aTarget, KBHandle.of(aKbObject), true));
         }
         else if (aKbObject instanceof KBInstance) {
-            List<KBHandle> conceptsForInstance = kbService
-                    .getConceptForInstance(kbModel.getObject(), aKbObject.getIdentifier(), true);
+            var conceptsForInstance = kbService.getConceptForInstance(kbModel.getObject(),
+                    aKbObject.getIdentifier(), true);
 
             if (!conceptsForInstance.isEmpty()) {
                 send(getPage(), Broadcast.BREADTH,
